Added support kibana alerts and connectors
Added support kibana alerts and connectors by adding xpack.encryptedSavedObjects.encryptionKey in kibana.yml

--- a/onstak/elasticsearch-init/forDocker/docker-compose.yml
+++ b/onstak/elasticsearch-init/forDocker/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       SERVER_NAME: kibanahost
       ELASTICSEARCH_URL: http://elasticsearch-init:9200
       ELASTICSEARCH_HOSTS: http://elasticsearch-init:9200
+    volumes:
+      - ./kibana.yml:/usr/share/kibana/config/kibana.yml
     networks:
       - elastic
     restart: "always"
